--- a/style.css
+++ b/style.css
@@ -4,16 +4,135 @@
     font-family: sans-serif;
     color: white;
   }
+
+
+
+  main{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 100vh;
+    padding: 1rem;
+    gap: 2vw;
+    height: 97vh;
+    width: 100vw;
+  }
   
   #item-1 {
     background-color: steelblue;
+    grid-column: 2 / 3;
+    width: 80vw;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
   }
   
   #item-2 {
     background-color: #fe7e02;
+    grid-column: 1 / 2;
+    grid-row: 1 ;
+    width: 10vw;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
   }
   
   #item-3 {
     background-color: #45525b;
+    grid-column: 3 / 4;
+    width: 10vw;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+  }
+
+  #lateral-1{
+    transform: rotate(-90deg);
+  }
+
+  #lateral-2{
+    transform: rotate(-90deg);
   }
   
+
+  @media screen and (min-device-width: 801px) and (max-device-width:1000px) {
+    
+    main{
+      grid-template-columns: 3fr 1fr;
+      grid-template-rows: 4fr 1fr;
+    }
+
+    #item-1{
+      width: 800px;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      height: 80vh;
+
+    }
+
+    #item-2{
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+      width: 100%;
+      height: 20vh;
+    }
+
+    #item-3{
+      height: 80vh;
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
+
+    #lateral-1{
+      transform: none;
+    }
+
+  }
+
+  @media screen and (max-device-width: 800px){
+    main{
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 4fr 1fr;
+    }
+
+    #item-1{
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+      width: 100vw;
+      height: 90vh;
+    }
+
+    #item-2{
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      width: 50vw;
+      height: 10vh;
+    }
+
+    #item-3{
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      width: 50vw;
+      height: 10vh;
+    }
+
+    #lateral-1{
+      transform: none;
+    }
+
+    #lateral-2{
+      transform: none;
+    }
+
+  }
+
+
+ 
+
+
